--- a/Landing_Page_Improvements.html
+++ b/Landing_Page_Improvements.html
@@ -7,69 +7,49 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <nav class="special sticky">
-        <ul class="main-nav">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Resume</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
 
-        </ul>
-
-
+    <!-- 
+  nav bar
+  Hero Section
+  Row/Section with Articles
+  Images
+  side by side articles
+  
+  -->
+    <nav class="navbar">
+        <div class="navbar-brand">Landing Page</div>
+        <a class ="navbar-link" href="#">CodingNinjas.com</a>
     </nav>
-    <div class="world">
-        <div class ="container">
-            <h2>Hello World!</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    <div class="hero">
+        <div class="container">
+            <h1>Hello World</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+
             </p>
-
-
         </div>
-
     </div>
-    <section class="container">
-        <div class="row">
-            <div class="article">
-                <h2>Article 1</h2>
-                <img class="article-image" src="https://source.unsplash.com/1200x720/?code" alt="green grass">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Eaque vitae repellendus, culpa quia quisquam optio iste consequuntur 
-                    molestiae asperiores laboriosam maxime veritatis. 
-                    Iusto exercitationem necessitatibus natus officiis ea magni sunt?
-                </p><br/>
-                <p><span class="text">Learn More</span></p>
 
-            </div>
-            <div class="article">
-                <h2>Article 2</h2>
-                <img class="article-image" src="https://source.unsplash.com/640x480/?tech" alt=" brown rock">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Eaque vitae repellendus, culpa quia quisquam optio iste consequuntur 
-                    molestiae asperiores laboriosam maxime veritatis. 
-                    Iusto exercitationem necessitatibus natus officiis ea magni sunt?
-                </p><br/>
-                <p><span class="text">Learn More</span></p>
+    <section class="row">
+        <div class="article">
+            <h2>Article1</h2>
+            <img src="https://source.unsplash.com/640x480/?laptop" class ="article-image" alt="Amazing Laptop">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
 
-            </div>
-            <div class="article">
-                <h2>Article 3</h2>
-                <img class="article-image"src="https://source.unsplash.com/640x480/?code" alt="gray asphalt">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                    Eaque vitae repellendus, culpa quia quisquam optio iste consequuntur 
-                    molestiae asperiores laboriosam maxime veritatis. 
-                    Iusto exercitationem necessitatibus natus officiis ea magni sunt?
-                </p><br/>
-                <p><span class="text">Learn More</span></p>
-
-            </div>
-
+            </p>
+            <p><span class="article-tag">Learn More</span></p>
         </div>
+        <div class="article">
+            <h2>Article2</h2>
+            <img src="https://source.unsplash.com/640x480/?technology" class ="article-image" alt="Technology">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+        </div>
+        <div class="article">
+            <h2>Article3</h2>
+            <img src="https://source.unsplash.com/640x480/?web development" class ="article-image" alt="Web Development">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+        </div>
+    </section>
+   
             
            
     </section>
