--- a/Landing_Page_Improvements.html
+++ b/Landing_Page_Improvements.html
@@ -18,7 +18,7 @@
   -->
     <nav class="navbar">
         <div class="navbar-brand">Landing Page</div>
-        <a class ="navbar-link" href="#">CodingNinjas.com</a>
+        <a class ="navbar-link" href="#"> <img src=" https://files.codingninjas.in/new-logo-03-11984.svg" width="200" height="50" alt="CodingNinjasLogo"></a>
     </nav>
     <div class="hero">
         <div class="container">
@@ -36,23 +36,27 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
 
             </p>
-            <p><span class="article-tag">Learn More</span></p>
+            <p><span class="article-tag">Learn More</span> </p>
         </div>
         <div class="article">
             <h2>Article2</h2>
             <img src="https://source.unsplash.com/640x480/?technology" class ="article-image" alt="Technology">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+
+            </p>
+            <p><span class="article-tag">Learn More</span> </p>
         </div>
         <div class="article">
             <h2>Article3</h2>
             <img src="https://source.unsplash.com/640x480/?web development" class ="article-image" alt="Web Development">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+            <p><span class="article-tag">Learn More</span> </p>
         </div>
     </section>
    
             
            
-    </section>
+ 
 
 </body>
 </html>
